--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restaurant-fe",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "description": "Small description for restaurant-fe goes here",
   "repository": "",
@@ -36,11 +36,6 @@
     "@glint/template": "^1.3.0",
     "@tsconfig/ember": "^3.0.4",
     "@types/ember": "^4.0.11",
-    "@types/ember-data": "^4.4.16",
-    "@types/ember-data__adapter": "^4.0.6",
-    "@types/ember-data__model": "^4.0.5",
-    "@types/ember-data__serializer": "^4.0.6",
-    "@types/ember-data__store": "^4.0.7",
     "@types/ember__application": "^4.0.11",
     "@types/ember__array": "^4.0.10",
     "@types/ember__component": "^4.0.22",
@@ -61,10 +56,16 @@
     "@types/ember__template": "^4.0.7",
     "@types/ember__test": "^4.0.6",
     "@types/ember__utils": "^4.0.7",
+    "@types/ember-data": "^4.4.16",
+    "@types/ember-data__adapter": "^4.0.6",
+    "@types/ember-data__model": "^4.0.5",
+    "@types/ember-data__serializer": "^4.0.6",
+    "@types/ember-data__store": "^4.0.7",
     "@types/qunit": "^2.19.10",
     "@types/rsvp": "^4.0.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.19",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
     "ember-auto-import": "^2.7.2",
@@ -75,6 +76,7 @@
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^8.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.3",
@@ -100,6 +102,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
+    "tailwindcss": "^3.4.3",
     "tracked-built-ins": "^3.3.0",
     "typescript": "^5.3.3",
     "webpack": "^5.90.3"
